# dagnabbit

./: .gitignore  Cargo.toml  README.md  dag-construction-handoff.md  dag-mcmc-sampler-handoff.md  dag-mcmc-sampler-plan.md  environment.yaml  pyproject.toml
.cursor/rules/: no-pytest.mdc  python-uv-run.mdc
dagnabbit/: bitarrays.py  cd_rge.py  dag.py  dag_eval_torch.py  model.py
dagnabbit/dag/: autoencoder.py  description.py  encoder.py  gates.py  kernel_torch.py  kernel_triton.py  kernels.py  render.py
dagnabbit/scratch/: test_bitpacking.py  visualize_bitpacking.py
dagnabbit/scripts/: analyze_graph_distributions.py  benchmark_dag_generation.py  benchmark_parent_prediction_similarity.py  blind_decode_sketch.py  config.py  count_parameters.py  diagnose_aggregation_shift.py  diagnose_root_collapse.py  graph_batches.py  how_many_graphs.py  inr_zero_order.py  logging_utils.py  profile_training.py  render.py  roundtrip_blind_decode.py  train.py  train_encoder.py  validate_mcmc_uniformity.py
dagnabbit/src/: bitarrays.py  cd_rge.py  dag.py  gate_functions.py  model.py
docs/: wallclock_optimization_notes.md
runs/20260603-232704-baseline/: events.out.tfevents.1780550824.Kais-MacBook-Pro.local.20482.0
runs/20260604-001956-nfnet-weight-standard-better-child-average/: events.out.tfevents.1780553996.Kais-MacBook-Pro.local.24525.0
runs/20260604-012544-gradaccum8-log-8/: events.out.tfevents.1780557944.Kais-MacBook-Pro.local.29421.0
scripts/: main.py  mkmp4.sh  neural_implicit.py  random_mutation.py
src/: bitarrays.py  bittensors.py  dag.py  gates.py  lib.rs  model.py
(+17 files in other folders)
