[project]
name = "dagnabbit"
version = "0.1.0"
description = "A NumPy/PyTorch port of dagnabbit-nim"
requires-python = ">=3.12.0,<3.13.0"
dependencies = [
    "torch>=2.5.0,<2.6.0",
    "torchvision>=0.20.0,<0.21.0",
    "tqdm",
    "numpy>=2.1.0,<2.2.0",
    "snakeviz==2.2",
    "black",
    "isort",
]

