[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dagnabbit"
version = "0.1.0"
description = "A NumPy/PyTorch port of dagnabbit-nim"
requires-python = ">=3.12.0,<3.13.0"
dependencies = [
    "torch>=2.12.0",
    "torchvision>=0.27",
    "tqdm",
    "numpy>=2.1",
    "snakeviz==2.2",
    "matplotlib",
    "ruff",
    "graphviz==0.21",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.18.0",
]

[tool.setuptools.packages.find]
include = ["dagnabbit*"]
